--- a/public/css/com.css
+++ b/public/css/com.css
@@ -16,7 +16,7 @@ img { border:0; max-width: 100%;}
 
 .iconfont{
     font-family:"iconfont" !important;
-    font-size:16px;font-style:normal;
+    font-size:0.16rem;font-style:normal;
     -webkit-font-smoothing: antialiased;
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;
