--- a/public/css/comment.css
+++ b/public/css/comment.css
@@ -176,3 +176,14 @@ footer  span{
     color:#fff;
 }
 
+button.copy_btn{
+    border: 0;
+    padding: 0.01rem;
+    color: #8f8f8f;
+    outline: none;
+    background: #fff;
+    text-align: center;
+    width: 30%;
+}
+
+
