--- a/public/css/index.css
+++ b/public/css/index.css
@@ -61,7 +61,7 @@ header span a{
 
 .article_btn {
     padding: 0.05rem 0;
-    border-top: 0.01rem solid #a0a0a0 ;
+    border-top: 0.01rem solid #cccccc ;
 }
 
 .article_btn span{
