--- a/public/css/index.css
+++ b/public/css/index.css
@@ -57,7 +57,7 @@ header span a{
     text-align: justify;
     font-size:0.12rem;
     font-weight: 600;
-    font-family: "SimSun","微软雅黑","arial";
+    font-family: "SimSun","微软雅黑";
 }
 
 .article_btn {
